force-app/main/default/objects/Account/fields/Statement_Emails__c.field-meta.xml
<CustomField>
    <fullName>Statement_Emails__c</fullName>
    <inlineHelpText>Yes/No if the statements are emailed.</inlineHelpText>
    <label>Statement Emails?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_or_no</valueSetName>
    </valueSet>
</CustomField>