force-app/main/default/objects/Account/fields/Store_Id__c.field-meta.xml
<CustomField>
    <fullName>Store_Id__c</fullName>
    <description>used on the Storefront Page Layout. visible to the Customers</description>
    <formula>Group_Customer_Reference__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Store Id</label>
    <type>Text</type>
</CustomField>