force-app/main/default/objects/Account/fields/Tax_Exemption_Account__c.field-meta.xml
<CustomField>
    <fullName>Tax_Exemption_Account__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Tax Exemption Account</label>
    <type>Checkbox</type>
</CustomField>