force-app/main/default/objects/Account/fields/Terms_Code_Description__c.field-meta.xml
<CustomField>
    <fullName>Terms_Code_Description__c</fullName>
    <inlineHelpText>Customers terms and agreement</inlineHelpText>
    <label>Terms Code Description</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>7 Days from Invoice</fullName>
            </value>
            <value>
                <fullName>30 Days from Statement</fullName>
            </value>
            <value>
                <fullName>45 Days from Statement</fullName>
            </value>
            <value>
                <fullName>60 Days from Statement</fullName>
            </value>
            <value>
                <fullName>90 Days from Statement</fullName>
            </value>
            <value>
                <fullName>120 Days from Statement</fullName>
            </value>
            <value>
                <fullName>14 Days from Invoice</fullName>
            </value>
            <value>
                <fullName>15 Days from Invoice</fullName>
            </value>
            <value>
                <fullName>21 Days from Invoice</fullName>
            </value>
            <value>
                <fullName>By Arrangement - No Payment</fullName>
            </value>
            <value>
                <fullName>* Strictly Cash on Delivery *</fullName>
            </value>
            <value>
                <fullName>COD &amp; Arrangement</fullName>
            </value>
            <value>
                <fullName>Consignment</fullName>
            </value>
            <value>
                <fullName>Current &amp; Arrangement</fullName>
            </value>
            <value>
                <fullName>Legal</fullName>
            </value>
            <value>
                <fullName>Letter of Credit</fullName>
            </value>
            <value>
                <fullName>Telegraphic Transfer</fullName>
            </value>
            <value>
                <fullName>May Pay on Deli-Strictly 30Day</fullName>
            </value>
            <value>
                <fullName>Pay on Delivery</fullName>
            </value>
            <value>
                <fullName>POD &amp; Arrangement</fullName>
            </value>
            <value>
                <fullName>Sight Draft</fullName>
            </value>
            <value>
                <fullName>Stop Delivery</fullName>
            </value>
            <value>
                <fullName>T/T Prior to Shipment</fullName>
            </value>
            <value>
                <fullName>Unlimited Credit</fullName>
            </value>
            <value>
                <fullName>Payment Before Delivery</fullName>
            </value>
            <value>
                <fullName>Acc Closed - Do Not Use</fullName>
            </value>
            <value>
                <fullName>Acc Closed - Refer New Acc</fullName>
            </value>
            <value>
                <fullName>15 Days From Statement</fullName>
            </value>
            <value>
                <fullName>7 Days From Invoice - No$s</fullName>
            </value>
            <value>
                <fullName>Credit Card on Deliver</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>