force-app/main/default/objects/Account/fields/Total_Due__c.field-meta.xml
<CustomField>
    <fullName>Total_Due__c</fullName>
    <inlineHelpText>The total amount outstanding on the account not including the memo amount (not yet posted amount).</inlineHelpText>
    <label>Total Due</label>
    <precision>13</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>