force-app/main/default/objects/Account/fields/Website_Lead_Sourced__c.field-meta.xml
<CustomField>
    <fullName>Website_Lead_Sourced__c</fullName>
    <inlineHelpText>From which website the Lead turned to Account was sourced from.</inlineHelpText>
    <label>Website Lead Sourced</label>
    <length>255</length>
    <type>Text</type>
</CustomField>