force-app/main/default/objects/Account/recordTypes/Farm.recordType-meta.xml
<RecordType>
    <fullName>Farm</fullName>
    <active>true</active>
    <description>Account Record Type to hold Farm Account Information</description>
    <label>Farm</label>
</RecordType>