force-app/main/default/objects/Account/recordTypes/Grower.recordType-meta.xml
<RecordType>
    <fullName>Grower</fullName>
    <active>true</active>
    <description>Record Type for Account to hold Grower&apos;s Data</description>
    <label>Grower</label>
</RecordType>