force-app/main/default/objects/Account/validationRules/ABN_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>ABN_Validation</fullName>
    <active>true</active>
    <description>ABN should only have numeric values.</description>
    <errorConditionFormula>AND(
    RecordType.DeveloperName = &apos;B2B_Customer&apos;,
    NOT(ISBLANK(ABN__c)),
    NOT(ISNUMBER(ABN__c)))</errorConditionFormula>
    <errorDisplayField>ABN__c</errorDisplayField>
    <errorMessage>ABN should only have numeric values.</errorMessage>
</ValidationRule>