force-app/main/default/objects/Account/validationRules/Customer_Number_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Customer_Number_Validation</fullName>
    <active>true</active>
    <description>Customer Number should only have numeric values.</description>
    <errorConditionFormula>AND(
    RecordType.DeveloperName = &apos;B2B_Customer&apos;,
    NOT(ISBLANK(Customer_Number__c)),
    NOT(ISNUMBER(Customer_Number__c))
    )</errorConditionFormula>
    <errorDisplayField>Customer_Number__c</errorDisplayField>
    <errorMessage>Customer Number should only have numeric values.</errorMessage>
</ValidationRule>