force-app/main/default/objects/Account/listViews/B2B_Customers.listView-meta.xml
<ListView>
    <fullName>B2B_Customers</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.ADDRESS1_STATE</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>ACCOUNT.TYPE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Account.B2B_Customer</value>
    </filters>
    <label>B2B Customers</label>
    <sharedTo>
        <roleAndSubordinatesInternal>National_Sales_Manager</roleAndSubordinatesInternal>
    </sharedTo>
</ListView>